# atik_control

./: CMakeLists.txt  README.md  atik_control.c.tags  atikcore.h  bta_print.c  bta_print.h  bta_shdata.c  bta_shdata.h  cAtik.cpp  cmdlnopts.c  cmdlnopts.h  main.c  main.h
atik_sdk/: atikccdsdk-1.15-armhf.deb
locale/ru/: messages.po  ru.po
locale/ru/LC_MESSAGES/: atik_control.mo
